src/index.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');

:root {
    --background: rgb(255, 255, 255);
    --font: rgb(0, 0, 0);
    --font-white: rgb(255, 255, 255);
    --border: rgb(0, 0, 0);
    --page-margin: 60px;
    --bars-height: 60px;
    font-size: 20px;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Jost', sans-serif;
    font-weight: 400;
    background-color: var(--background);
    color: var(--font);
    line-height: 0;
}

/* Default */

h1 {
    font-family: 'Krona One', sans-serif;
    font-size: 3rem;
    font-weight: 500;
    margin: 0 0 30px 0;
    margin-bottom: 50px;
}

h2 {
    font-size: 0.75rem;
    font-weight: 400;
    font-family: 'Krona One', sans-serif;
}

h3 {
    font-size: 0.8rem;
    font-weight: 600;
    text-transform: uppercase;
    margin: 0 0 20px 0;
    padding: 12px;
    margin-bottom: 42px;
    color: var(--font);
    border: 3px solid var(--border);
}

a {
    color: #000;
    text-decoration: none;
}

button {
    margin: 0;
    padding: 0;
    border: none;
    background: none;
    font-family: 'Jost', sans-serif;
    font-weight: 400;
    font-size: 22px;
    color: var(--font);
    text-decoration: none;
    line-height: 1.6;
    cursor: pointer;
}

.visible {
    opacity: 1;
    z-index: 1;
    transition: opacity 0.05s linear;
}

.invisible {
    opacity: 0;
    z-index: 0;
    transition: opacity 0.05s linear, z-index 0.05s step-end;
}

.content-page {
    margin: calc(var(--bars-height) * 2) 12rem 30px 12rem;
    display: flex;
    flex-direction: column;
    line-height: 1.6;
}

.content-page h1 {
    margin-bottom: 1.5rem;
    font-size: 2.5rem;
    line-height: 1.4;
    color: var(--font);
}

.content-page a:hover {
    text-decoration: underline;
}

.content-page img {
    width: 60%;
}

.content-page > * {
    margin: 10px 0;
    color: var(--font);
}

.navlink {
    position: relative;
    line-height: 1.6;
    text-decoration: none;
    cursor: pointer;
}

.navlink::after {
    content: "";
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 1.5px;
    bottom: 0;
    left: 0;
    background-color: #000;
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
}

.navlink:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
}

.selected::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 1.5px;
    bottom: 0;
    left: 0;
    background-color: #000;
    transform: scaleX(1);
    transform-origin: bottom left;
}


/* Discover page */

.Discover {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

.Map {
    width: 100vw;
    height: 100vh;
}

.Pin {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    cursor: pointer;
    transition: transform 0.5s;
}

.Pin:hover {
    transform: scale(1.2);
}

.mapboxgl-popup-content {
    padding: 0;
}

.mapboxgl-popup-tip {
    display: none;
}

.PopUpContent {
    font-family: 'Jost', sans-serif;
    font-size: 1rem;
    line-height: 1.4;
    transition: transform 0.5s;
}

.PopUpContent:hover {
    transform: scale(1.01);
}

.PopUpContent .link {
    display: inline-block;
    padding: 2.5rem 2rem 3rem 3rem;
}

.PopUpContent .snippet-info {
    font-weight: 500;
    font-size: 0.8rem;
    text-decoration: none;
}

/* Ideas page */

.Ideas .container {
    display: flex;
    flex-direction: column;
    margin-top: var(--bars-height);
}

/* Idea page */

.Idea .container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--background);
}

.Idea .container h1 {
    max-width: 100vw;
    word-wrap: break-word;
}

.Idea header {
    box-sizing: border-box;
    width: 100%;
    padding: 120px 2rem 30px 2rem;  
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    line-height: 1.4;
}

.Idea .header-picture-container {
    width: 100%;
    padding-bottom: 100px;
    display: flex;
    justify-content: center;
}

.Idea .header-picture-container img {
    width: 50%;
}

.Idea .container article {
    padding: 60px 12rem 0 12rem;
    line-height: 1.6;
    white-space: pre-line;
    max-width: 1600px;
}

.Idea .container article p {
    margin-bottom: 40px;
}

.Idea .container article p:first-of-type:first-letter {
    font-size: 316%;
    line-height: 1;
    float: left;
    padding-right: .125em;
  }

  @-moz-document url-prefix() {
    .Idea .container article p:first-of-type:first-letter {
      margin-top: .13em;
    }
  }

.Idea .container article a {
    text-decoration: underline;
}

.Idea .container .author {
    margin-bottom: 60px;
    font-size: 0.8rem;
    font-weight: 600;
    text-transform: uppercase;
}

.Idea .container .intro {
    font-weight: 600;
    font-size: 1.2rem;
}

.Idea .container .highlight-line {
    width: 120px;
    height: 24px;
    border-bottom: 3px solid #000;
    position: absolute;
}

.Idea .container .highlight {
    font-size: 1.2rem;
    font-weight: 600;
    padding-left: 160px;
}

.Idea .container .random-ideas {
    width: 100%;
    box-sizing: border-box;
}

/* Registry page */

.Registry .content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    padding: 0 var(--page-margin);
    margin-top: var(--bars-height);
}

.Registry .content > * {
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
}

.Registry .content > *:not(:last-child) {
    border-bottom: 2px solid #000;
}

.Registry .content .word {
    margin-right: 30px;
}

.Registry .content .link {
    margin-right: 20px;
}

.Registry .content .dot {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    transition: transform 0.5s;
}

.Registry .content .dot:hover {
    transform: scale(1.2);
}

/* About page, PrivacyPolicy page, Imprint page, Registry page */

.About, .PrivacyPolicy, .Imprint, .Registry {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #F6F6F4;
}

/* IdeasRow component */

.IdeasRow {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0 var(--page-margin);
    line-height: 1.6;
    transition: transform 0.5s;
}

.IdeasRow:hover {
    transform: scale(1.01);
}

.IdeasRow .tag {
    margin: 30px 0 0 0;
}

.IdeasRow .title {
    max-width: 100%;
    margin: 30px 0 30px 0;
    font-family: 'Krona One', sans-serif;
    font-size: 2.5rem;
    color: var(--font);
    text-decoration: none;
    word-wrap: break-word;
    cursor: pointer;
}

/* Navigation component */

.Navigation {
    width: 100%;
    height: var(--bars-height);
    position: fixed;
    top: 0; 
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color:white;
    z-index: 2;
}

.Navigation .links:first-child {
    margin-left: var(--page-margin);
}

.Navigation .links .navlink:not(:first-child) {
    margin-left: 40px;
}

.Navigation .home {
    height: 75%;
    margin-right: 1rem;
}

.Navigation img {
    height: 100%;
}

/* Footer component */

footer {
    height: var(--bars-height);
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 0 var(--page-margin) 0 0;
}

footer span {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

footer span a:last-child {
    margin-left: 30px;
}

.About footer, .PrivacyPolicy footer, .Imprint footer, .Registry footer {
    background-color: #fff;
}

.Discover footer {
    position: absolute;
    bottom: 0;
    right: 0;
}

.Discover footer Link {
    padding: 0;

}


/* Media queries */

/* Tablet landscape mode - max-width: 1080px */

@media only screen and (max-width: 1081px) {

    :root {
        font-size: 16px;
    }

    h3 {
        border-width: 2px;
    }

    .content-page {
        margin-right: 4rem;
        margin-left: 4rem;
    }
    
    .content-page h1 {
        font-size: 2.2rem;
    }

    .Idea .container .intro, .Idea .container .highlight {
        font-size: 1rem;
    }

    .Idea .container article {
        padding-left: 6rem;
        padding-right: 6rem;
    }

    .Registry .content > *:not(:last-child) {
        border-bottom-width: 2px;
    }
}

/* Tablet portrait mode - max-width: 820px */

@media only screen and (max-width: 821px) {
    :root {
        font-size: 16px;
        --page-margin: 40px;
        --bars-height: 50px;
    }

    .content-page img {
        width: 100%;
    }

    .PopUpContent .link {
        padding: 1rem 1rem 1rem 2rem;
    }
}

/* Smartphone portrait mode - max-width: 428px */

@media only screen and (max-width: 429px) {

    :root {
        font-size: 14px;
        --page-margin: 30px;
        --bars-height: 46px;
    }

    h1 {
        font-size: 2.4rem;
    }

    h3 {
        padding: 10px;
        border-width: 2px;
    }

    .content-page {
        margin-top: calc(var(--bars-height) * 1.5);
        margin-right: 2rem;
        margin-left: 2rem;
    }

    .content-page h1 {
        font-size: 1.4rem;
    }

    .Navigation .links .navlink:not(:first-child) {
        margin-left: 12px;
    }

    .IdeasRow .title {
        font-size: 1.6rem;
    }

    .Idea .container article {
        padding-left: 2rem;
        padding-right: 2rem;
    }

    .Idea .container article p {
        margin-bottom: 1.5rem;
    }

    .Idea .container .highlight-line {
        position: relative;
        height: 1rem;
        margin-bottom: 1.5rem;
    }

    .Idea .container .highlight {
        padding-left: 0;
    }

    .Registry .content > *:not(:last-child) {
        border-bottom: 1.5px solid #000;
    }

    .Registry .content > * {
        height: 3.2rem;
    }

    .Registry .content .word {
        margin-right: 24px;
    }

    .Registry .content .link {
        margin-right: 12px;
    }

    footer {
        padding-right: 30px;
    }

    footer span a:last-child {
        margin-left: 12px;
    }
}

